modified css, added content to main page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,56 @@
 </head>
 <body>
   <header>
-    <h2>Pat's Salmon Cookies are sure to satisfy your desires!</h2>
+    <nav>
+      <img src="images/salmon.png" alt="salmon image" />
+      <h1>Pat's Salmon Cookies</h2>
+    </nav>
   </header>
-  <main>
+  <section>
     <div class="text">
-      <p>Do you love salmon cuisine? Do you have a sweet tooth? Do you love all things salmon?</p>
+      <h2>Pat's Salmon Cookies are sure to satisfy your desires!</h2>
+      <p>Do you love salmon cuisine? Do you have a sweet tooth? Do you love all things salmon?<br />Then you've come to the right place, because we have what you need.</p>
+    
+      <article>
+        <h2>About Us</h2>
+        <p>
+          Pat loves cookies. Pat loves Seattle. Pat loves salmon.<br /> One day, Pat decided to put all his loves together and came up with salmon cookies. These delectables soon became so popular amongst his family and friends, Pat decided to share them with the rest of his Seattle community. Now we are established at five locations in the Greater Seattle area. In addition to cookies, we have apparel and all the tools you need to make salmon cookies, right in your own kitchen.
+        </p>
+        <ul>
+        <li class="bold">Alki</li>
+          <ul>
+            <li>123 Front Way St</li>
+            <li>West Seattle</li>
+          </ul>
+        <li class="bold">1st and Pike</li>
+        <ul>
+          <li>123 Pike St</li>
+          <li>Seattle</li>
+        </ul>
+        <li class="bold">SeaTac Airport</li>
+        <ul>
+          <li>123 Airport Way St</li>
+          <li>Tukwila</li>
+        </ul>
+        <li class="bold">Seattle Center</li>
+        <ul>
+          <li>123 Code St</li>
+          <li>Seattle</li>
+        </ul>
+        <li class="bold">Capitol Hill</li>
+        <ul>
+          <li>123 Cap Way</li>
+          <li>Capitol Hill</li>
+        </ul>                            
+      </ul>
+      <p>All our stores are open daily from 9 am to 8 pm.</p>
+      <section class="contact">
+        <h2>Contact Us</h2>
+        <p> Our main office is located at 1st and Pike, and we are available by phone during hours of operation. We try to answer emails within 48 hours, so be patient if you send us an email at salmoncookies@mail.mail</p>
+      </section>
+      </article>
     </div>
-  </main>
-  <script src="./js/app.js"></script>
+  </section>
+  <footer>123 Pike St<br />Phone: 206-345-6789<br />salmoncookies@mail.mail</footer>
 </body>
 </html>
