--- a/sales.html
+++ b/sales.html
@@ -4,6 +4,7 @@
   <head>
     <title>Salmon Cookies</title>
     <link href="https://fonts.googleapis.com/css?family=Germania+One|PT+Sans|Cedarville+Cursive" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
@@ -32,8 +33,7 @@
       <div id="hidden">
       </div>
     </main>
-    <footer>
-    </footer>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
