--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/salmon.png" alt="salmon image" />
+      <img src="images/chinook.jpg" alt="chinook image" />
       <h1>Pat's Salmon Cookies</h2>
     </nav>
   </header>
@@ -20,37 +20,45 @@
     
       <article>
         <h2>About Us</h2>
-        <p>
-          Pat loves cookies. Pat loves Seattle. Pat loves salmon.<br /> One day, Pat decided to put all his loves together and came up with salmon cookies. These delectables soon became so popular amongst his family and friends, Pat decided to share them with the rest of his Seattle community. Now we are established at five locations in the Greater Seattle area. In addition to cookies, we have apparel and all the tools you need to make salmon cookies, right in your own kitchen.
-        </p>
+        <p>Pat loves cookies. Pat loves Seattle. Pat loves salmon.<br /> One day, Pat decided to put all his loves together and came up with salmon cookies. These delectables soon became so popular amongst his family and friends, Pat decided to share them with the rest of his Seattle community. Now we are established at five locations in the Greater Seattle area.</p>
         <ul>
-        <li class="bold">Alki</li>
-          <ul>
-            <li>123 Front Way St</li>
-            <li>West Seattle</li>
-          </ul>
-        <li class="bold">1st and Pike</li>
-        <ul>
-          <li>123 Pike St</li>
-          <li>Seattle</li>
+          <li class="bold">Alki</li>
+            <ul>
+              <li>123 Front Way St</li>
+              <li>West Seattle</li>
+            </ul>
+          <li class="bold">1st and Pike</li>
+            <ul>
+              <li>123 Pike St</li>
+              <li>Seattle</li>
+            </ul>
+          <li class="bold">SeaTac Airport</li>
+            <ul>
+              <li>123 Airport Way St</li>
+              <li>Tukwila</li>
+            </ul>
+          <li class="bold">Seattle Center</li>
+            <ul>
+              <li>123 Code St</li>
+              <li>Seattle</li>
+            </ul>
+          <li class="bold">Capitol Hill</li>
+            <ul>
+              <li>123 Cap Way</li>
+              <li>Capitol Hill</li>
+            </ul>                            
         </ul>
-        <li class="bold">SeaTac Airport</li>
-        <ul>
-          <li>123 Airport Way St</li>
-          <li>Tukwila</li>
-        </ul>
-        <li class="bold">Seattle Center</li>
-        <ul>
-          <li>123 Code St</li>
-          <li>Seattle</li>
-        </ul>
-        <li class="bold">Capitol Hill</li>
-        <ul>
-          <li>123 Cap Way</li>
-          <li>Capitol Hill</li>
-        </ul>                            
-      </ul>
-      <p>All our stores are open daily from 9 am to 8 pm.</p>
+        <aside>
+          <p>All our stores are open daily from 9 am to 8 pm.</p>
+          <img src="images/family.jpg" alt="family enjoying salmon cookies" />
+        </aside>
+        <p>In addition to cookies, we have apparel and all the tools you need to make salmon cookies, right in your own kitchen. Make sure you check out all the gear we have in our stores!<br />There's something for everyone: frosted sugary cookies for those with a sweet tooth, tees in every size to fit every member of your family, or cute cookie cutters for the avid baker!</p>
+        <h3>We hope to see you soon.</h3>
+        <div>
+          <img src="images/frosted-cookie.jpg" alt="frosted fish cookies" />
+          <img src="images/shirt.jpg" alt="frosted fish cookies" />
+          <img src="images/cutter.jpeg" alt="frosted fish cookies" />
+        </div>
       <section class="contact">
         <h2>Contact Us</h2>
         <p> Our main office is located at 1st and Pike, and we are available by phone during hours of operation. We try to answer emails within 48 hours, so be patient if you send us an email at salmoncookies@mail.mail</p>
